option java_package = "cn.edu.scut.iais.proto";
option java_outer_classname = "DetectorProto";

message ObjectDetect
{
	required int32 state_code = 1;
	optional int32 object_count = 2;
	repeated Object object_list = 3;
}

message Object
{
	required int32 object_id = 1;
	required float score = 2;
	required int32 x = 3;
	required int32 y = 4;
	required int32 w = 5;
	required int32 h = 6;
}

message SceneDetect
{
	required int32 state_code = 1;
	optional int32 scene_id = 2;
	optional float score = 3;
}